@@ -1,13 +1,0 @@
-[Desktop Entry]
-Encoding=UTF-8
-Name=Last.FM Vagalume
-Comment=Vagalume Last.FM Client
-Exec=vagalume 
-Icon=vagalume.png
-Terminal=false
-X-MultipleArgs=false
-Type=Application
-Categories=GTK;Application;AudioVideo
-#X-Osso-Service=org.moblin.media.music
-OnlyShowIn=GNOME;Mobile
-
